--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.border {
+  border: 1px solid black;
+  padding: 1em;
+  margin: 1em;
+  border-radius: 4px;
+}
