skapat karaktär o sök comp

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
-.App {
-  text-align: center;
+.SearchBar {
+  background-color: lightblue;
+  border: 1px solid black;
+  padding-top: 2em;
 }
 
+.Characters {
+  border: 1px solid black;
+  padding: 1em;
+  margin: 0 10em;
+  border-radius: 4px;
+}
+
+.App {
+  text-align: center;
+  border: none;
+}
 
 .App-header {
   background-color: #282c34;
