--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue','Didact Gothic'
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -18,4 +18,84 @@ code {
   padding: 1em;
   margin: 1em;
   border-radius: 4px;
+}
+
+.header {
+  background: linear-gradient(179.89deg, #374C4F 0.99%, #5D767B 133.08%);;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  font-family: 'Didact Gothic';
+  color:#D39933;
+}
+ul {
+  display:flex;
+  justify-content: center;
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color:  #2B4045;;
+  border: 2.5px solid #ECAE59;
+  border-left:0px;
+  border-right:0px;
+
+  
+  
+  
+}
+
+li {
+  float: left;
+}
+
+li a, .dropbtn {
+  display: inline-block;
+  color:#ECAE59;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+  background: linear-gradient(179.89deg, #374C4F 0.99%, #5D767B 133.08%);;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color:  #2B4045;;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border: 2.5px solid #ECAE59;
+}
+
+.dropdown-content a {
+  color:#ECAE59;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+@media screen and (max-width: 500px) {
+  ul  {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
