--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue','Didact Gothic'
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue','Didact Gothic','Game of Thrones'
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+}
+html {
+  min-height: 100%;
+  background: linear-gradient(0deg, #1E3032 19.84%, #374C4F 71.64%);
 }
 
 code {
@@ -15,8 +20,10 @@ code {
 .border {
   border: 1px solid black;
   padding: 1em;
-  margin: 1em;
+  margin: 10em;
+  margin-top: 0.25em;
   border-radius: 4px;
+  background: linear-gradient(0deg, #1E3032 19.84%, #374C4F 71.64%);
 }
 
 .header {
@@ -50,9 +57,7 @@ ul {
 
 li {
   float: left;
-  margin-right: 0.5em;
 }
-
 
 li a, .dropbtn {
   display: inline-block;
@@ -99,4 +104,26 @@ li.dropdown {
     display: block;
     text-align: left;
   }
+}
+
+/* CSS för världarna*/
+
+img{
+  float: right;
+  position: relative;
+
+}
+.p1{
+  text-align: justify;
+  text-align: center;
+  font-family: 'Didact Gothic';
+  color: #E8E8E8;
+}
+.h1{
+  color: #E8E8E8;
+  font-family:"Game of Thrones";
+}
+.h2{
+  color: #E8E8E8;
+  font-family:"Game of Thrones";
 }
