--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+main{
+  display: flex;
+  justify-content: center;
+ 
+}
 
 .border {
   border: 1px solid black;
@@ -23,7 +28,8 @@ code {
   margin: 10em;
   margin-top: 0.25em;
   border-radius: 4px;
-  background: linear-gradient(0deg, #1E3032 19.84%, #374C4F 71.64%);
+  max-width: 1100px;
+  
 }
 
 .header {
@@ -111,11 +117,12 @@ li.dropdown {
 img{
   float: right;
   position: relative;
+  margin-left: 1em;
 
 }
 .p1{
   text-align: justify;
-  text-align: center;
+  
   font-family: 'Didact Gothic';
   color: #E8E8E8;
 }
