--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ main{
 }
 
 .border {
-  border: 1px solid black;
+  
   padding: 1em;
   margin: 10em;
   margin-top: 0.25em;
@@ -122,7 +122,7 @@ img{
 }
 .p1{
   text-align: justify;
-  
+  font-size: larger;
   font-family: 'Didact Gothic';
   color: #E8E8E8;
 }
