--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue','Didact Gothic','Game of Thrones'
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue','Didact Gothic','Game of Thrones','Prata'
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
   
 }
 html {
@@ -19,21 +20,25 @@ code {
 main{
   display: flex;
   justify-content: center;
+  border: 1px solid white;
  
 }
 
 .border {
-  
   padding: 1em;
-  margin: 10em;
   margin-top: 0.25em;
   border-radius: 4px;
-  max-width: 1100px;
-  
+  width: 100%;
+  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1000px;
 }
 
+
 .header {
-  background: linear-gradient(179.89deg, #374C4F 0.99%, #5D767B 133.08%);;
+  background: linear-gradient(179.89deg, #374C4F 0.99%, #5D767B 133.08%);
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -151,4 +156,15 @@ img{
 .h2{
   color: #E8E8E8;
   font-family:"Game of Thrones";
+}
+
+.font-add {
+  font-family: 'Roboto';
+  font-size: 1.13em;
+}
+
+@media screen and (max-width: 600px) {
+  .border {
+    margin: 1em;
+  }
 }
