--- a/src/form.css
+++ b/src/form.css
@@ -14,7 +14,16 @@
 
 form > select {
     display: block;
-    width: 100%;
+    width: 101%;
+    outline: 0;
+    background: #eee;
+    padding: 15px 20px 15px 0px;
+    border: 3px solid #eee;
+}
+
+form > textarea {
+    display: block;
+    width: 95%;
     outline: 0;
     background: #eee;
     padding: 15px 20px 15px 0px;
@@ -40,7 +49,7 @@ form {
 
 form > button {
     display: block;
-    width: 100%;
+    width: 101%;
     margin: 20px 0;
     background: rgb(64, 128, 101);
     color: white;
@@ -64,3 +73,27 @@ form input:focus {
     height: 1.2em;
     margin-top: 3px;
 }
+
+.slider {
+    padding: 0;
+    width: 100%; /* Full-width */
+    height: 0px; /* Specified height */
+    outline: none; /* Remove outline */
+}
+
+input[type=range]{
+    -webkit-appearance: none;
+}
+
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 28px;
+    width: 7px;
+    margin-top: -9px;
+    background:  #ECAE59;
+    border-top: 3px solid #2B4045;
+}
+
+
