--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color:  #2B4045;;
+  background-color:  #2B4045;
   border: 2.5px solid #ECAE59;
   border-left:0px;
   border-right:0px;
