--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,191 @@
-.App {
+.App-start {}
+
+.Logo-Background {
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	height: 140px;
+	background: linear-gradient(179.89deg, #374C4F 0.99%, #5D767B 133.08%);
+}
+
+.Logo {}
+
+body {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Didact Gothic', 'Game of Thrones', 'Prata'
+		sans-serif;
+}
+
+header {
+	background: #2B4045;
+	border-top: 2px solid #ECAE59;
+	border-bottom: 2px solid #ECAE59;
+	height: 40px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.Button-worlds {
+	color: #D8A85C;
+	border: none;
+	cursor: pointer;
+	background: transparent;
+	/* font-size: 1.1em; */
+	font-family: 'Game of Thrones';
+	transform: translate(0px, 1px);
+}
+
+.Button-characters {
+	color: #D8A85C;
+	border: none;
+	cursor: pointer;
+	background: transparent;
+	/* font-size: 1.1em; */
+	font-family: 'Game of Thrones';
+	transform: translate(0px, 1px);
+}
+
+.Button-aboutGOG {
+	color: #D8A85C;
+	border: none;
+	cursor: pointer;
+	background: transparent;
+	/* font-size: 1.1em; */
+	font-family: 'Game of Thrones';
+}
+
+.Map {
+	background-image: url(./components/assets/map.svg);
+	height: 500px;
+	background-position: center;
+}
+
+main {
+	border-top: 4px solid #2B4045;
+	background: linear-gradient(0deg, #1E3032 19.84%, #374C4F 71.64%);
+	display: flex;
+	justify-content: center;
+	padding-top: 80px;
+}
+
+.Banner {
+	display: flex;
+	justify-content: center;
+	margin: 0 20px 0 20px;
+}
+
+.Text {
+	margin: 15px 100px 20px 100px;
+	font-size: 1.4em;
+	padding-top: 30px;
+	text-align: justify;
+}
+
+aside {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	max-width: 1100px;
+	margin: 30px 0 0 0;
+}
+
+.First-Aside {
+	margin: 0 80px 30px 80px;
+	color: #E8E8E8;
+}
+
+.Second-Aside {
+	margin: 0 80px 30px 80px;
+	color: #E8E8E8;
+}
+
+.Glenn {
+	margin: 65px 0 40px 0;
+	display: flex;
+	justify-content: center;
+}
+
+.Snake {
+	display: flex;
+	justify-content: center;
+	transform: scale(.5);
+	width: 100%;
+}
+
+.GOG-Banner {
+	display: none;
+}
+
+.BannerMediaInfo {
+	display: none;
+}
+
+@media (max-width: 1600px) {
+
+	.Text {
+		margin: 15px 190px 20px 190px;
+		font-size: 1.4em;
+		padding-top: 30px;
+		text-align: justify;
+	}
+
+	.Banner {
+		display: none;
+	}
+
+	.BannerMediaInfo {
+		display: block;
+		display: flex;
+		justify-content: center;
+	}
+
+	.Snake {
+		display: flex;
+		justify-content: center;
+		transform: scale(.5);
+		width: 100%;
+	}
+}
+
+@media (max-width: 1200px) {
+
+	main {
+		flex-direction: column;
+		padding-bottom: 40px;
+	}
+
+	.Glenn {}
+
+	.BannerMediaInfo {
+		display: none;
+	}
+
+	.Text {
+		margin: 0 100px 20px 100px;
+	}
+
+	.GOG-Banner {
+		display: block;
+		transform: translate(0, -120px);
+		margin: 0 40px 0 80px
+	}
+
+	.Snake {
+		display: flex;
+		justify-content: center;
+		transform: scale(.5);
+		width: 100%;
+	}
+}
+
+
+
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -36,3 +223,4 @@
     transform: rotate(360deg);
   }
 }
+ */
