--- a/src/App.css
+++ b/src/App.css
@@ -1,183 +1,202 @@
 .App-start {
+	width: 100%;
 }
 
 .Logo-Background {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  height: 140px;
-  background: linear-gradient(179.89deg, #374c4f 0.99%, #5d767b 133.08%);
-}
-
-.Logo {
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	height: 140px;
+	background: linear-gradient(179.89deg, #374c4f 0.99%, #5d767b 133.08%);
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    "Didact Gothic", "Game of Thrones", "Prata" sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Didact Gothic', 'Game of Thrones', 'Prata'
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	color: white;
 }
 
 header {
-  background: #2b4045;
-  border-top: 2px solid #ecae59;
-  border-bottom: 2px solid #ecae59;
-  height: 40px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+	/* 	border-top: 2px solid #ecae59;
+	border-bottom: 2px solid #ecae59; */
+	/* 	display: flex; */
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+ul {
+	margin: 0;
+	padding: 0;
+}
+
+.Tree-Options {
+	background: #2b4045;
+	border-top: 2px solid #ecae59;
+	border-bottom: 2px solid #ecae59;
+	height: 43px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
 }
 
 .Button-worlds {
-  color: #d8a85c;
-  border: none;
-  cursor: pointer;
-  background: transparent;
-  /* font-size: 1.1em; */
-  font-family: "Game of Thrones";
-  transform: translate(0px, 1px);
+	color: #d8a85c;
+	border: none;
+	cursor: pointer;
+	background: transparent;
+	/* font-size: 1.1em; */
+	font-family: "Game of Thrones";
+	transform: translate(0px, 1px);
 }
 
 .Button-characters {
-  color: #d8a85c;
-  border: none;
-  cursor: pointer;
-  background: transparent;
-  /* font-size: 1.1em; */
-  font-family: "Game of Thrones";
-  transform: translate(0px, 1px);
+	color: #d8a85c;
+	border: none;
+	cursor: pointer;
+	background: transparent;
+	/* font-size: 1.1em; */
+	font-family: "Game of Thrones";
+	transform: translate(0px, 1px);
 }
 
 .Button-aboutGOG {
-  color: #d8a85c;
-  border: none;
-  cursor: pointer;
-  background: transparent;
-  /* font-size: 1.1em; */
-  font-family: "Game of Thrones";
+	color: #d8a85c;
+	border: none;
+	cursor: pointer;
+	background: transparent;
+	/* font-size: 1.1em; */
+	font-family: "Game of Thrones";
 }
 
 .Map {
-  background-image: url(./components/assets/map.svg);
-  height: 500px;
-  background-position: center;
+	background-image: url(./components/assets/map.svg);
+	height: 500px;
+	background-position: center;
+	border-bottom: 4px solid #2b4045;
 }
 
 main {
-  border-top: 4px solid #2b4045;
-  background: linear-gradient(0deg, #1e3032 19.84%, #374c4f 71.64%);
-  display: flex;
-  justify-content: center;
-  padding-top: 80px;
+	background: linear-gradient(0deg, #1e3032 19.84%, #374c4f 71.64%);
+	display: flex;
+	justify-content: center;
+}
+
+.Main-Start {
+	padding-top: 30px;
 }
 
 .Banner {
-  display: flex;
-  justify-content: center;
-  margin: 0 20px 0 20px;
+	display: flex;
+	justify-content: center;
+	margin: 0 20px 0 20px;
 }
 
 .Text {
-  margin: 15px 100px 20px 100px;
-  font-size: 1.4em;
-  padding-top: 30px;
-  text-align: justify;
+	margin: 15px 100px 20px 100px;
+	font-size: 1.4em;
+	padding-top: 30px;
+	text-align: justify;
 }
 
 aside {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 1100px;
-  margin: 30px 0 0 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	max-width: 1100px;
+	margin: 30px 0 0 0;
 }
 
 .First-Aside {
-  margin: 0 80px 30px 80px;
-  color: #e8e8e8;
+	margin: 0 80px 30px 80px;
+	color: #e8e8e8;
 }
 
 .Second-Aside {
-  margin: 0 80px 30px 80px;
-  color: #e8e8e8;
+	margin: 0 80px 30px 80px;
+	color: #e8e8e8;
 }
 
 .Glenn {
-  margin: 65px 0 40px 0;
-  display: flex;
-  justify-content: center;
+	margin: 65px 0 40px 0;
+	display: flex;
+	justify-content: center;
 }
 
 .Snake {
-  display: flex;
-  justify-content: center;
-  transform: scale(0.5);
-  width: 100%;
+	display: flex;
+	justify-content: center;
+	transform: scale(0.5);
+	width: 100%;
 }
 
 .GOG-Banner {
-  display: none;
+	display: none;
 }
 
 .BannerMediaInfo {
-  display: none;
+	display: none;
 }
 
 @media (max-width: 1600px) {
-  .Text {
-    margin: 15px 190px 20px 190px;
-    font-size: 1.4em;
-    padding-top: 30px;
-    text-align: justify;
-  }
+	.Text {
+		margin: 15px 190px 20px 190px;
+		font-size: 1.4em;
+		padding-top: 30px;
+		text-align: justify;
+	}
 
-  .Banner {
-    display: none;
-  }
+	.Banner {
+		display: none;
+	}
 
-  .BannerMediaInfo {
-    display: block;
-    display: flex;
-    justify-content: center;
-  }
+	.BannerMediaInfo {
+		display: block;
+		display: flex;
+		justify-content: center;
+	}
 
-  .Snake {
-    display: flex;
-    justify-content: center;
-    transform: scale(0.5);
-    width: 100%;
-  }
+	.Snake {
+		display: flex;
+		justify-content: center;
+		transform: scale(0.5);
+		width: 100%;
+	}
 }
 
 @media (max-width: 1200px) {
-  main {
-    flex-direction: column;
-    padding-bottom: 40px;
-  }
+	main {
+		flex-direction: column;
+		padding-bottom: 40px;
+		padding-top: 0px;
+	}
 
-  .Glenn {
-  }
+	.BannerMediaInfo {
+		display: none;
+	}
 
-  .BannerMediaInfo {
-    display: none;
-  }
+	.Text {
+		margin: 0 100px 20px 100px;
+		padding-top: 0;
+	}
 
-  .Text {
-    margin: 0 100px 20px 100px;
-  }
+	.GOG-Banner {
+		display: block;
+		float: left;
+		transform: translate(0px, -70px);
+		margin: 0 40px 0 160px;
+	}
 
-  .GOG-Banner {
-    display: block;
-    transform: translate(0, -120px);
-    margin: 0 40px 0 80px;
-  }
-
-  .Snake {
-    display: flex;
-    justify-content: center;
-    transform: scale(0.5);
-    width: 100%;
-  }
+	.Snake {
+		display: flex;
+		justify-content: center;
+		transform: scale(0.5);
+		width: 100%;
+	}
 }
 
 /* .App {
