placed searchbar in characters

--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,7 @@ li.dropdown {
 
 /* CSS för världarna*/
 
-.planets-item {
+.character-item {
 	height: 7em;
   border:1.5px solid black;
   background: rgb(5, 5, 5);
