--- a/src/form.css
+++ b/src/form.css
@@ -69,12 +69,6 @@ form input:focus {
     background: white;
 }
 
-.space-for-val {
-    height: 1.2em;
-    margin-top: 3px;
-}
-
-
 
 form input[type="range"] { 
     padding: 0;
@@ -84,23 +78,38 @@ form input[type="range"] {
     height: 12px;
     width: 101%;
     cursor: pointer;
-    border-radius: 0; /* iOS */
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
     outline: none; /* Remove outline */
 }
 
 
 form input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    border: none;
-    height: 28px;
-    border: 0px;
-    width: 15px;
-    background:  rgb(241, 241, 241);
-    border: 7px solid rgb(69, 119, 98);
-    
-     -webkit-appearance: none;
+    height: 12px;
+    width: 10px;
+    background:  rgb(221, 163, 36);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 6px;
+    -webkit-appearance: none;
     box-shadow: -100vw 0 0 100vw rgb(233, 208, 176);
     outline: none; /* Remove outline */
 }
 
+form > label {
+    width: 100%;
+    color: #ECAE59
+}
+
+form > span> label {
+    color: #ECAE59
+}
+
+form > .space-for-val {
+    width: 100%;
+    height: 1.2em;
+    margin-top: 3px;
+    display: flex;
+    justify-content: space-between;
+}
 
