--- a/src/index.css
+++ b/src/index.css
@@ -26,15 +26,12 @@ main {
 }
 
 .border {
-	padding: 1em;
-	margin-top: 0.25em;
-	border-radius: 4px;
 	width: 100%;
-	border: 1px solid white;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	max-width: 1000px;
+	align-items: center;
+	max-width: 1200px;
 }
 
 
@@ -127,21 +124,16 @@ li.dropdown {
 /* CSS för världarna*/
 
 .character-item {
-	height: 7em;
-	border: 1.5px solid black;
-	background: rgb(5, 5, 5);
-	padding-bottom: 0.5em;
-	padding-top: 0.5em;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	border-radius: 15px;
+	max-width: 260px;
 }
 
 .persons {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-	grid-gap: 1em;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-gap: 3em;
 }
 
 img {
@@ -172,8 +164,18 @@ img {
 	font-size: 1.13em;
 }
 
-@media screen and (max-width: 600px) {
-	.border {
-		margin: 1em;
+@media screen and (max-width: 1000px) {
+	.persons {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 3em;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.persons {
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-gap: 3em;
 	}
 }
