--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ li.dropdown {
 	border: 2.5px solid #ECAE59;
 }
 
-.dropdown-content a {
+.dropdown-content  {
 	color: #ECAE59;
 	padding: 12px 16px;
 	text-decoration: none;
