--- a/src/App.css
+++ b/src/App.css
@@ -1,319 +1,343 @@
 .App-start {
-	width: 100%;
+  width: 100%;
 }
 
 .Logo-Background {
-	display: flex;
-	justify-content: center;
-	align-items: flex-end;
-	height: 140px;
-	background: linear-gradient(179.89deg, #374c4f 0.99%, #5d767b 133.08%);
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 140px;
+  background: linear-gradient(179.89deg, #374c4f 0.99%, #5d767b 133.08%);
 }
 
 body {
-	margin: 0;
-	padding: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Didact Gothic', 'Game of Thrones', 'Prata'
-		sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	color: white;
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    "Didact Gothic", "Game of Thrones", "Prata" sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: white;
 }
 
 header {
-	/* 	border-top: 2px solid #ecae59;
+  /* 	border-top: 2px solid #ecae59;
 	border-bottom: 2px solid #ecae59; */
-	/* 	display: flex; */
-	justify-content: space-evenly;
-	align-items: center;
+  /* 	display: flex; */
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.About-GOG-Media {
+  display: none;
 }
 
 ul {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .Tree-Options {
-	background: #2b4045;
-	border-top: 2px solid #ecae59;
-	border-bottom: 2px solid #ecae59;
-	height: 43px;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
+  background: #2b4045;
+  border-top: 2px solid #ecae59;
+  border-bottom: 2px solid #ecae59;
+  height: 43px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .Button-worlds {
-	color: #d8a85c;
-	border: none;
-	cursor: pointer;
-	background: transparent;
-	/* font-size: 1.1em; */
-	font-family: "Game of Thrones";
-	transform: translate(0px, 1px);
+  color: #d8a85c;
+  border: none;
+  cursor: pointer;
+  background: transparent;
+  /* font-size: 1.1em; */
+  font-family: "Game of Thrones";
+  transform: translate(0px, 1px);
 }
 
 .Button-characters {
-	color: #d8a85c;
-	border: none;
-	cursor: pointer;
-	background: transparent;
-	/* font-size: 1.1em; */
-	font-family: "Game of Thrones";
-	transform: translate(0px, 1px);
+  color: #d8a85c;
+  border: none;
+  cursor: pointer;
+  background: transparent;
+  /* font-size: 1.1em; */
+  font-family: "Game of Thrones";
+  transform: translate(0px, 1px);
 }
 
 .Button-aboutGOG {
-	color: #d8a85c;
-	border: none;
-	cursor: pointer;
-	background: transparent;
-	/* font-size: 1.1em; */
-	font-family: "Game of Thrones";
+  color: #d8a85c;
+  border: none;
+  cursor: pointer;
+  background: transparent;
+  /* font-size: 1.1em; */
+  font-family: "Game of Thrones";
 }
 
 .Map {
-	background-image: url(./components/assets/map.svg);
-	height: 500px;
-	background-position: center;
-	border-bottom: 4px solid #2b4045;
+  background-image: url(./components/assets/map.svg);
+  height: 500px;
+  background-position: center;
+  border-bottom: 4px solid #2b4045;
 }
 
 main {
-	background: linear-gradient(0deg, #1e3032 19.84%, #374c4f 71.64%);
-	display: flex;
-	justify-content: center;
+  background: linear-gradient(0deg, #1e3032 19.84%, #374c4f 71.64%);
+  display: flex;
+  justify-content: center;
 }
 
 .Main-Start {
-	padding-top: 30px;
+  padding-top: 30px;
 }
 
 .Banner {
-	display: flex;
-	justify-content: center;
-	margin: 0 20px 0 20px;
+  display: flex;
+  justify-content: center;
+  margin: 0 20px 0 20px;
 }
 
 .Text {
-	margin: 15px 100px 20px 100px;
-	font-size: 1.4em;
-	padding-top: 30px;
-	text-align: justify;
+  margin: 15px 100px 20px 100px;
+  font-size: 1.4em;
+  padding-top: 30px;
+  text-align: justify;
 }
 
 aside {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	max-width: 1100px;
-	margin: 30px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1100px;
+  margin: 30px 0 0 0;
 }
 
 .First-Aside {
-	margin: 0 80px 30px 80px;
-	color: #e8e8e8;
+  margin: 0 80px 30px 80px;
+  color: #e8e8e8;
 }
 
 .Second-Aside {
-	margin: 0 80px 30px 80px;
-	color: #e8e8e8;
+  margin: 0 80px 30px 80px;
+  color: #e8e8e8;
 }
 
 .Glenn {
-	margin: 65px 0 40px 0;
-	display: flex;
-	justify-content: center;
+  margin: 65px 0 40px 0;
+  display: flex;
+  justify-content: center;
 }
 
 .Snake {
-	display: flex;
-	justify-content: center;
-	transform: scale(0.5);
-	width: 100%;
+  display: flex;
+  justify-content: center;
+  transform: scale(0.5);
+  width: 100%;
 }
 
 .GOG-Banner {
-	display: none;
+  display: none;
 }
 
 .BannerMediaInfo {
-	display: none;
+  display: none;
 }
 
 @media (max-width: 1600px) {
-	.Text {
-		margin: 15px 190px 20px 190px;
-		font-size: 1.4em;
-		padding-top: 30px;
-		text-align: justify;
-	}
+  .Text {
+    margin: 15px 190px 20px 190px;
+    font-size: 1.4em;
+    padding-top: 30px;
+    text-align: justify;
+  }
 
-	.Banner {
-		display: none;
-	}
+  .Banner {
+    display: none;
+  }
 
-	.BannerMediaInfo {
-		display: block;
-		display: flex;
-		justify-content: center;
-	}
+  .BannerMediaInfo {
+    display: block;
+    display: flex;
+    justify-content: center;
+  }
 
-	.Snake {
-		display: flex;
-		justify-content: center;
-		transform: scale(0.5);
-		width: 100%;
-	}
+  .Snake {
+    display: flex;
+    justify-content: center;
+    transform: scale(0.5);
+    width: 100%;
+  }
 }
 
 @media (max-width: 1200px) {
-	main {
-		flex-direction: column;
-		padding-bottom: 40px;
-		padding-top: 0px;
-	}
+  main {
+    flex-direction: column;
+    padding-bottom: 40px;
+    padding-top: 0px;
+  }
 
-	.BannerMediaInfo {
-		display: none;
-	}
+  .BannerMediaInfo {
+    display: none;
+  }
 
-	.Text {
-		margin: 0 100px 20px 100px;
-		padding-top: 0;
-	}
+  .Text {
+    margin: 0 100px 20px 100px;
+    padding-top: 0;
+  }
 
-	.GOG-Banner {
-		display: block;
-		float: left;
-		transform: translate(0px, -70px);
-		margin: 0 40px 0 160px;
-	}
+  .GOG-Banner {
+    display: block;
+    float: left;
+    transform: translate(0px, -70px);
+    margin: 0 40px 0 160px;
+  }
 
-	.Snake {
-		display: flex;
-		justify-content: center;
-		transform: scale(0.5);
-		width: 100%;
-	}
+  .Snake {
+    display: flex;
+    justify-content: center;
+    transform: scale(0.5);
+    width: 100%;
+  }
+}
+
+@media (max-width: 800px) {
+  .About-GOG-Media {
+    display: block;
+    background-image: url(../src/components/assets/aboutGOGmedia.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 120px;
+    width: 360px;
+  }
+  .About-GOG {
+    display: none;
+  }
 }
 
 .SearchBar {
-	padding-top: 40px;
-	padding-bottom: 20px;
+  padding-top: 40px;
+  padding-bottom: 20px;
 }
 
 .character-input {
-	padding: 5px 10px 5px 10px;
-	width: 300px;
+  padding: 5px 10px 5px 10px;
+  width: 300px;
 }
 
 .btm-add-character {
-	font-family: Didact Gothic;
-	margin-bottom: 50px;
-	padding: 10px 20px 10px 20px;
-	width: 150px;
-	border: none;
-	background: #3A5358;
-	border: 1px solid #ECAE59;
-	box-sizing: border-box;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	color: #ffffff;
+  font-family: Didact Gothic;
+  margin-bottom: 50px;
+  padding: 10px 20px 10px 20px;
+  width: 150px;
+  border: none;
+  background: #3a5358;
+  border: 1px solid #ecae59;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: #ffffff;
 }
 
 .character-item {
-	background-image: url(../src/components/assets/character-card-frame.svg);
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 350px;
-	height: 425px;
+  background-image: url(../src/components/assets/character-card-frame.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 350px;
+  height: 425px;
 }
 
 .card-content {
-	display: flex;
-	flex-direction: column;
-	padding: 5px 10px 30px 10px;
-	justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+  padding: 5px 10px 30px 10px;
+  justify-content: space-evenly;
 }
 
 .name-box {
-	display: flex;
-	justify-content: space-between;
-	padding: 0 10px 0 10px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px 0 10px;
 }
 
 .name {
-	padding: 10px 0 0 0;
+  padding: 10px 0 0 0;
 }
 
 .btm-box {
-	display: flex;
-	justify-self: right;
-	align-items: right;
-	background: transparent;
-	border: none;
-
+  display: flex;
+  justify-self: right;
+  align-items: right;
+  background: transparent;
+  border: none;
 }
 
 .btm-delete-box {
-	background-image: url(../src/components/assets/skull.png);
-	background-repeat: no-repeat;
-	height: 27px;
-	width: 27px;
-	margin: 10px;
-	border: none;
-	margin: 4px 0 2px 10px;
-	background-position: center;
+  background-image: url(../src/components/assets/skull.png);
+  background-repeat: no-repeat;
+  height: 27px;
+  width: 27px;
+  margin: 10px;
+  border: none;
+  margin: 4px 0 2px 10px;
+  background-position: center;
 }
 
 .btm-delete {
-	border: none;
-	background: transparent;
+  border: none;
+  background: transparent;
 }
 
 .btm-edit-box {
-	background-image: url(../src/components/assets/edit.svg);
-	background-repeat: no-repeat;
-	height: 29px;
-	width: 29px;
-	margin: 3px 0 2px 10px;
-	border: none;
-	background-position: center;
+  background-image: url(../src/components/assets/edit.svg);
+  background-repeat: no-repeat;
+  height: 29px;
+  width: 29px;
+  margin: 3px 0 2px 10px;
+  border: none;
+  background-position: center;
 }
 
-
 .btm-edit {
-	border: none;
+  border: none;
 }
 
 .id {
-	display: none;
+  display: none;
 }
 
 .world {
-	display: flex;
-	padding-top: 30px;
-	height: 30px;
+  display: flex;
+  padding-top: 30px;
+  height: 30px;
 }
 
 .world-text {
-	padding-left: 10px;
+  padding-left: 10px;
 }
 
 .world-pic {
-	height: 70px;
+  height: 70px;
 }
 
 .iq {
-	padding: 10px;
+  padding: 10px;
 }
 
 .power {
-	padding: 10px;
+  padding: 10px;
 }
 
 .backstory {
-	padding: 10px;
-	height: 90px;
+  padding: 10px;
+  height: 90px;
+}
+
+.About-GOG {
+  background-image: url(../src/components/assets/aboutGOG.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 120px;
+  width: 720px;
 }
