--- a/src/App.css
+++ b/src/App.css
@@ -295,7 +295,11 @@ aside {
 .world {
 	display: flex;
 	padding-top: 30px;
-	height: 30px;
+	height: 55px;
+}
+
+.world-pic-inside {
+	
 }
 
 .world-text {
