--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+
 .App-start {
 	width: 100%;
+	font-family: 'Didact Gothic', sans-serif;
 }
 
 .Logo-Background {
@@ -10,6 +13,9 @@
 	background: linear-gradient(179.89deg, #374c4f 0.99%, #5d767b 133.08%);
 	cursor: pointer;
 }
+
+
+
 
 body {
 	margin: 0;
@@ -53,6 +59,11 @@ ul {
 	/* font-size: 1.1em; */
 	font-family: "Game of Thrones";
 	transform: translate(0px, 1px);
+	transition: transform .13s;
+}
+.Button-worlds:hover {
+	transform: scale(1.04);
+	color: #e2b87e;
 }
 
 .Button-characters {
@@ -63,6 +74,11 @@ ul {
 	/* font-size: 1.1em; */
 	font-family: "Game of Thrones";
 	transform: translate(0px, 1px);
+	transition: transform .13s;
+}
+.Button-characters:hover {
+	transform: scale(1.04);
+	color: #e2b87e;
 }
 
 .Button-aboutGOG {
@@ -72,6 +88,11 @@ ul {
 	background: transparent;
 	/* font-size: 1.1em; */
 	font-family: "Game of Thrones";
+	transition: transform .13s;
+}
+.Button-aboutGOG:hover {
+	transform: scale(1.04);
+	color: #e2b87e;
 }
 
 .Map {
@@ -211,7 +232,7 @@ aside {
 }
 
 .btm-add-character {
-	font-family: Didact Gothic;
+	font-family: 'Didact Gothic', sans-serif;
 	margin-bottom: 50px;
 	padding: 10px 20px 10px 20px;
 	width: 150px;
@@ -232,6 +253,7 @@ aside {
 }
 
 .card-content {
+	font-family: 'Didact Gothic', sans-serif;
 	display: flex;
 	flex-direction: column;
 	padding: 5px 10px 30px 10px;
@@ -246,7 +268,8 @@ aside {
 }
 
 .name {
-	padding: 10px 0 0 0;
+	padding: 6px 0 0 0;
+	font-size: 1.14em;
 }
 
 .btm-box {
@@ -259,34 +282,52 @@ aside {
 }
 
 .btm-delete-box {
-	background-image: url(../src/components/assets/skull.png);
+	background-image: url(../src/components/assets/skull-delete.svg);
 	background-repeat: no-repeat;
 	height: 27px;
-	width: 27px;
+	width: 23px;
 	margin: 10px;
 	border: none;
-	margin: 4px 0 2px 10px;
+	margin: 4px 0px 2px 10px;
 	background-position: center;
+	transition: transform .2s;
+}
+
+.btm-delete-box:hover {
+transform: rotate(0.1turn) scale(1.8 );
 }
 
 .btm-delete {
+	height: 27px;
+	width: 23px;
 	border: none;
 	background: transparent;
+	outline: none;
+	cursor: pointer;
 }
 
 .btm-edit-box {
-	background-image: url(../src/components/assets/edit.svg);
+	background-image: url(../src/components/assets/pen-edit.svg);
 	background-repeat: no-repeat;
-	height: 29px;
-	width: 29px;
-	margin: 3px 0 2px 10px;
+	height: 27px;
+	width: 23px;
+	margin: 4px 0 2px 10px;
 	border: none;
 	background-position: center;
+	transition: transform .2s;
 }
 
+.btm-edit-box:hover {
+	transform: rotate(1turn) scale(1.8 );
+}
 
 .btm-edit {
+	height: 27px;
+	width: 23px;
 	border: none;
+	background: transparent;
+	outline: none;
+	cursor: pointer;
 }
 
 .id {
@@ -296,18 +337,18 @@ aside {
 .world {
 	display: flex;
 	padding-top: 0px;
-	height: 65px;
+	height: 73px;
 	justify-content: space-between;
 }
 
 .world-pic-inside {
-	padding-right: 1.2em;
-	padding-top: 0.8em;
+	padding-right: 15px;
+	padding-top: 1.2em;
 }
 
 .world-text {
 	padding-left: 10px;
-	padding-top: 1.3em;
+	padding-top: 1.7em;
 }
 
 .world-pic {
@@ -316,13 +357,22 @@ aside {
 
 .iq {
 	padding: 10px;
+	padding-top: 12px;
+	padding-bottom: 0px;
 }
 
 .power {
 	padding: 10px;
+	padding-top: 14px;
+	padding-bottom: 0px;
 }
 
 .backstory {
 	padding: 10px;
 	height: 90px;
+	line-height: 1em;
+}
+
+.world-backs-card-col {
+	color:#ECAE59;
 }
