--- a/src/form.css
+++ b/src/form.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	font-family: 'Didact Gothic', sans-serif;
 }
 
 .valid {
@@ -10,6 +11,10 @@
 
 .invalid {
 	border-color: rgb(230, 81, 81);
+}
+
+.btn-add {
+	font-family: 'Didact Gothic', sans-serif;
 }
 
 form>select {
