--- a/src/popup.css
+++ b/src/popup.css
@@ -1,18 +1,16 @@
 .add-popup {
-    /* display: none;  */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 2%; /* Location of the box */
+    position: fixed;
+    z-index: 1;
+    padding-top: 2%;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
   }
   
-  /* Modal Content */
+
   .add-popup-content {
     position: relative;
     background-color: #2B4045;
@@ -26,7 +24,6 @@
     animation-duration: 0.4s
   }
   
-  /* Add Animation */
   @-webkit-keyframes animatetop {
     from {top:-300px; opacity:0} 
     to {top:0; opacity:1}
@@ -37,7 +34,6 @@
     to {top:0; opacity:1}
   }
   
-  /* The Close Button */
   .close {
     color: white;
     float: right;
@@ -68,7 +64,7 @@
   
   .add-popup-footer {
     text-align: center;
-    font-family: 'Didact Gothic';
+    font-family: 'Didact Gothic', sans-serif;
     font-size: 1em;
     padding: 15px 16px;
     height: 15px;
