--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,6 @@ body {
 
 }
 
-html {
-	min-height: 100%;
-	background: linear-gradient(0deg, #1E3032 19.84%, #374C4F 71.64%);
-}
-
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
@@ -27,9 +22,10 @@ main {
 
 .border {
 	width: 100%;
+	height: 1500px;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	max-width: 1200px;
 }
@@ -127,7 +123,7 @@ li.dropdown {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	max-width: 260px;
+	max-width: 280px;
 }
 
 .persons {
@@ -139,7 +135,6 @@ li.dropdown {
 img {
 	position: relative;
 	margin-left: 1em;
-
 }
 
 .p1 {
