--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ ul {
 }
 
 .Map-Box {
-  overflow: scroll;
+  overflow: auto;
   height: 500px;
 }
 
@@ -109,6 +109,7 @@ ul {
   background-image: url(./components/assets/map-big.png);
   height: 1050px;
   background-position: center;
+
   cursor: pointer;
   box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.25),
     inset 0px -10px 10px rgba(0, 0, 0, 0.25);
