--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap");
+@font-face {
+  font-family: 'Game of Thrones';
+  font-style: normal;
+  src: local('Game of Thrones'), local('Game of Thrones'),
+    url('./fonts/Game of Thrones.ttf') format('ttf'), 
+}
 
 .App-start {
   width: 100%;
@@ -185,6 +191,12 @@ img {
 .font-add {
   font-family: "Roboto";
   font-size: 1.13em;
+}
+
+.font-add-big {
+  font-family: "Roboto";
+  font-size: 1.7em;
+  font-weight: 100;
 }
 
 @media screen and (max-width: 1000px) {
